# ftp-crack

./: Cargo.toml
src/: ftp.rs  main.rs
