[package]
name = "ftp-crack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.2.25"
lazy_static = "0.1.16"
regex = "0.1.80"
openssl = { version = "0.10", optional = true }
colored = "2.0.0"
